kubernetes/fargate-eks-ALB-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "fargate-eks-alb-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: flask
spec:
  rules:
    - http:
       paths:
        - path: /*
          backend:
            serviceName: "flask"
            servicePort: 80
